# toy_cfd

./: CMakeLists.txt  README.md  simple.h
BoundaryLayer/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
BoundaryLayer/include/: Laminar.h  Mesh.h  Turbulence.h
BoundaryLayer/src/: Laminar.cpp  Mesh.cpp  Turbulence.cpp  main.cpp
QRSM/: QRSM.vcxproj  main.cpp
QRSM/Debug/: vc141.idb
QRSM/Debug/QRSM.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  QRSM.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
QRSM/x64/Debug/: vc141.idb
QRSM/x64/Debug/QRSM.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  QRSM.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
QRSM/x64/Release/QRSM.tlog/: CL.command.1.tlog  CL.write.1.tlog  QRSM.lastbuildstate  QRSM.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
matrix_multiply_code/: matrix_mpi  matrix_mpi.cpp  matrix_openmp  matrix_openmp.cpp  matrix_seq  matrix_seq.cpp
simple/: log  readme.txt
simple/src/: main.cpp  simple.cpp
